add_subdirectory(AutoSave)
add_subdirectory(CallGraph)
add_subdirectory(CodeFormatter)
add_subdirectory(CodeLiteDiff)
add_subdirectory(Copyright)
add_subdirectory(DatabaseExplorer)
add_subdirectory(DebugAdapterClient)
add_subdirectory(Docker)
add_subdirectory(EditorConfigPlugin)
add_subdirectory(ExternalTools)
add_subdirectory(HelpPlugin)
add_subdirectory(LanguageServer)
add_subdirectory(Outline)
add_subdirectory(PHPLint)
add_subdirectory(PHPRefactoring)
add_subdirectory(Rust)
add_subdirectory(SmartCompletion)
add_subdirectory(SnipWiz)
add_subdirectory(SpellChecker)
add_subdirectory(Subversion2)
add_subdirectory(Tail)
add_subdirectory(WordCompletion)
add_subdirectory(abbreviation)
add_subdirectory(codelite_vim)
add_subdirectory(codelitephp)
add_subdirectory(git)

if(NOT DISABLE_CXX)
  add_subdirectory(CMakePlugin)
  add_subdirectory(ContinuousBuild)
  add_subdirectory(Debugger)
  add_subdirectory(EOSWiki)
  add_subdirectory(Gizmos)
  add_subdirectory(QmakePlugin)
  add_subdirectory(UnitTestCPP)
  add_subdirectory(cppchecker)
  add_subdirectory(cscope)
  add_subdirectory(gdbparser)
  add_subdirectory(wxformbuilder)
endif()

if(wxWITH_ZOOM_NAVIGATOR)
  message(STATUS "Including ZoomNavigator")
  add_subdirectory(ZoomNavigator)
else()
  message(STATUS "Excluding ZoomNavigator")
endif()

if(WITH_SFTP)
  add_subdirectory(Remoty)
  add_subdirectory(SFTP)
endif(WITH_SFTP)

if(UNIX
   AND NOT APPLE
   AND NOT DISABLE_CXX)
  # Add valgrind plugin
  add_subdirectory(MemCheck)
endif()

if(APPLE AND NOT DISABLE_CXX)
  message("-- Adding MacBundler...")
  add_subdirectory(MacBundler)
endif()
